--- a/MilitaryDtg/App.config
+++ b/MilitaryDtg/App.config
@@ -2,24 +2,24 @@
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Usa.Mil.Dtg.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+            <section name="MilitaryDtg.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
         </sectionGroup>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="Usa.Mil.Dtg.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+            <section name="MilitaryDtg.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <applicationSettings>
-        <Usa.Mil.Dtg.Properties.Settings>
+        <MilitaryDtg.Properties.Settings>
             <setting name="DateTimeGroupTimeZoneFormatString" serializeAs="String">
                 <value>[DTZ]</value>
             </setting>
-        </Usa.Mil.Dtg.Properties.Settings>
+        </MilitaryDtg.Properties.Settings>
     </applicationSettings>
     <userSettings>
-        <Usa.Mil.Dtg.Properties.Settings>
+        <MilitaryDtg.Properties.Settings>
             <setting name="DefaultDateTimeGroupStringFormat" serializeAs="String">
                 <value>ddHHmmss [DTZ] MMM yyyy</value>
             </setting>
-        </Usa.Mil.Dtg.Properties.Settings>
+        </MilitaryDtg.Properties.Settings>
     </userSettings>
 </configuration>
