--- a/MilitaryDtg/App.config
+++ b/MilitaryDtg/App.config
@@ -1,25 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
-    <configSections>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="MilitaryDtg.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="MilitaryDtg.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <applicationSettings>
-        <MilitaryDtg.Properties.Settings>
-            <setting name="DateTimeGroupTimeZoneFormatString" serializeAs="String">
-                <value>[DTZ]</value>
-            </setting>
-        </MilitaryDtg.Properties.Settings>
-    </applicationSettings>
-    <userSettings>
-        <MilitaryDtg.Properties.Settings>
-            <setting name="DefaultDateTimeGroupStringFormat" serializeAs="String">
-                <value>ddHHmmss [DTZ] MMM yyyy</value>
-            </setting>
-        </MilitaryDtg.Properties.Settings>
-    </userSettings>
+  <configSections>
+    <sectionGroup name="applicationSettings"
+                  type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="MilitaryDtg.Properties.Settings"
+               type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+               requirePermission="false" />
+    </sectionGroup>
+    <sectionGroup name="userSettings"
+                  type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="MilitaryDtg.Properties.Settings"
+               type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+               allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <applicationSettings>
+    <MilitaryDtg.Properties.Settings>
+      <setting name="DateTimeGroupTimeZoneFormatString" serializeAs="String">
+        <value>[DTZ]</value>
+      </setting>
+    </MilitaryDtg.Properties.Settings>
+  </applicationSettings>
+  <userSettings>
+    <MilitaryDtg.Properties.Settings>
+      <setting name="DefaultDateTimeGroupStringFormat" serializeAs="String">
+        <value>ddHHmmss [DTZ] MMM yyyy</value>
+      </setting>
+    </MilitaryDtg.Properties.Settings>
+  </userSettings>
 </configuration>
